# juke-it-cef

./: .gitignore  CMakeLists.txt  README.md  README.txt
FileserverModule/: CMakeLists.txt  main.cpp
JukeItApp/: AbstractFileServerHandler.h  AudioInspector.cc  AudioInspector.h  CMakeLists.txt  FileServerHandler.cc  FileServerHandler.h  JukeItApp.exe.manifest  JukeItApp.rc  MsgHandler_Configuration.cc  MsgHandler_Configuration.h  MsgHandler_FileServer.cc  MsgHandler_FileServer.h  MsgHandler_MusicPlayer.cc  MsgHandler_MusicPlayer.h  MsgHandler_WebLogger.cc  MsgHandler_WebLogger.h  MusicPlayer.cc  MusicPlayer.h  MusicPlayerAPI.cc  MusicPlayerAPI.h  RendererApp.cpp  RendererApp.h  SongCache.cpp  SongCache.h  SqliteAPI.cc  SqliteAPI.h  SqliteFSHandler.cc  SqliteFSHandler.h  SqliteHandler.cpp  SqliteHandler.h  abstract_message_handler.cc  abstract_message_handler.h  app_browser_impl.cc  app_browser_impl.h  app_factory.h  app_renderer_impl.cc  app_renderer_impl.h  browser_util.cc  browser_util.h  cefsimple.aps  (+31 more)
JukeItApp/res/: message_router.html
JukeItApp/res/win/: RCa13132
JukeItWeb/: package-lock.json  package.json
JukeItWeb/app/: app.js  global-styles.js  index.html
JukeItWeb/app/actions/: devicesActions.js  establishmentActions.js  evenLogActions.js  fileServerActions.js  firebaseActions.js  libraryActions.js  loginActions.js  playbackActions.js  playerActions.js  playerServerActions.js  playlistsActions.js  registerActions.js  settingsActions.js  songListActions.js  userDataActions.js
JukeItWeb/app/components/: index.js
JukeItWeb/app/components/Albums/: index.js  messages.js
JukeItWeb/app/components/Artists/: index.js  messages.js
JukeItWeb/app/components/AutoSizeDiv/: index.js
JukeItWeb/app/components/Devices/: index.js  messages.js
JukeItWeb/app/components/Establishment/: index.js  messages.js
JukeItWeb/app/components/FileAvailabilityTool/: index.js  messages.js
JukeItWeb/app/components/Genres/: index.js  messages.js
JukeItWeb/app/components/GridItem/: index.js
JukeItWeb/app/components/Home/: index.js  messages.js
JukeItWeb/app/components/LoadScreen/: index.js
JukeItWeb/app/components/Login/: index.js  messages.js
JukeItWeb/app/components/MillisToTime/: index.js
JukeItWeb/app/components/MusicEntityDetail/: index.js  messages.js
JukeItWeb/app/components/NewPlaylistDialog/: index.js  messages.js
JukeItWeb/app/components/OrangeDivider/: index.js
JukeItWeb/app/components/Playback/: index.js  messages.js
JukeItWeb/app/components/PlaybackWidget/: index.js
JukeItWeb/app/components/Player/: index.js
JukeItWeb/app/components/Playlists/: index.js  messages.js
JukeItWeb/app/components/Register/: index.js  messages.js
JukeItWeb/app/components/Settings/: index.js  messages.js
JukeItWeb/app/components/SongList/: index.js  messages.js
JukeItWeb/app/components/SongListDumb/: index.js  messages.js
JukeItWeb/app/components/Songs/: index.js  messages.js
JukeItWeb/app/components/SpotRegister/: index.js  messages.js
JukeItWeb/app/components/Star/: index.js
JukeItWeb/app/components/StyledLink/: index.js
JukeItWeb/app/components/StyledTextField/: index.js
JukeItWeb/app/components/Table/: index.js
JukeItWeb/app/components/TableBodyRow/: index.js
JukeItWeb/app/components/TableHead/: index.js
JukeItWeb/app/components/TableHeadCell/: index.js
JukeItWeb/app/components/Widget/: index.js
JukeItWeb/app/containers/AlbumDetailPage/: index.js
JukeItWeb/app/containers/AlbumsPage/: index.js  messages.js
JukeItWeb/app/containers/App/: index.js
JukeItWeb/app/containers/ArtistDetailPage/: index.js
JukeItWeb/app/containers/ArtistsPage/: index.js  messages.js
JukeItWeb/app/containers/DetailPage/: index.js
JukeItWeb/app/containers/DevicesPage/: index.js  messages.js
JukeItWeb/app/containers/EstablishmentPage/: index.js  messages.js
JukeItWeb/app/containers/FileAvailabilityToolPage/: index.js  messages.js
JukeItWeb/app/containers/GenreDetailPage/: index.js
JukeItWeb/app/containers/GenresPage/: index.js  messages.js
JukeItWeb/app/containers/HomePage/: index.js
JukeItWeb/app/containers/LanguageProvider/: index.js  selectors.js
JukeItWeb/app/containers/LibraryPage/: index.js
JukeItWeb/app/containers/LoginPage/: index.js
JukeItWeb/app/containers/PlaybackPage/: index.js
JukeItWeb/app/containers/PlayerStrip/: index.js
JukeItWeb/app/containers/PlaylistDetailPage/: index.js
JukeItWeb/app/containers/PlaylistsPage/: index.js  messages.js
JukeItWeb/app/containers/RegisterPage/: index.js
JukeItWeb/app/containers/ScrollPane/: index.js
JukeItWeb/app/containers/SettingsPage/: index.js
JukeItWeb/app/containers/SongsPage/: index.js
JukeItWeb/app/containers/SpotRegisterPage/: index.js
JukeItWeb/app/containers/TileGrid/: index.js
JukeItWeb/app/images/: index.js
JukeItWeb/app/reducers/: devicesReducer.js  eventLogReducer.js  index.js  libraryReducer.js  loginReducer.js  playbackReducer.js  playerReducer.js  playlistsReducer.js  reducerTemplate.js  registerReducer.js  settingsReducer.js  songListReducer.js  userDataReducer.js
JukeItWeb/app/store/: configureStore.development.js  configureStore.production.js  initialState.js
JukeItWeb/app/utils/: IntlGlobalProvider.js  index.js  randomCoverArt.js
JukeItWeb/internals/webpack/: webpack.prod.babel.js
PlayerModule/: CMakeLists.txt  main.cpp
cmake/: cef_macros.cmake  cef_variables.cmake
cpprestsdk/include/cpprest/: astreambuf.h  asyncrt_utils.h  base_uri.h  containerstream.h  filestream.h  http_client.h  http_headers.h  http_listener.h  http_msg.h  interopstream.h  json.h  oauth1.h  oauth2.h  producerconsumerstream.h  rawptrstream.h  streams.h  uri.h  uri_builder.h  ws_client.h  ws_msg.h
ffmpeg/include/libavcodec/: avcodec.h  version.h
ffmpeg/include/libavformat/: avformat.h  avio.h  version.h
ffmpeg/include/libavutil/: common.h  pixfmt.h
include/: cef_version.h
portaudio/: CMakeLists.txt
sqlite3/: CMakeLists.txt
sqlite3/lib_x64/: sqlite3.exp  sqlite3.lib
sqlite3/lib_x86/: sqlite3.exp  sqlite3.lib
(+1 files in other folders)
